--- a/LR.WebUI/Areas/Admin/Views/UserRoles/_GridView.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/UserRoles/_GridView.cshtml
@@ -1,4 +1,7 @@
 ﻿@model SxVMAppRole[]
+@{
+    var canRedact = User.IsInRole("admin");
+}
 
 @Html.SxGridView(Model, new SxExtantions.SxGridViewSettings<SxVMAppRole>()
 {
@@ -6,9 +9,9 @@
         new SxExtantions.SxGridViewColumn<SxVMAppRole> { FieldName="Name", Caption="Роль"},
         new SxExtantions.SxGridViewColumn<SxVMAppRole> { FieldName="Description", Caption="Описание"},
     },
-    EnableCreating = true,
+    EnableCreating = canRedact,
     CreateRowUrl = Url.Action("Edit", "UserRoles"),
-    EnableEditing = true,
+    EnableEditing = canRedact,
     EditRowUrl = (x) => { return Url.Action("Edit", "UserRoles", new { id = x.Id }); },
     DataAjaxUrl = Url.Action("Index", "UserRoles")
 })
