--- a/LR.WebUI/less/site.less
+++ b/LR.WebUI/less/site.less
@@ -169,16 +169,32 @@ textarea.form-control {
     padding: 20px 0;
 }
 
+.top-body__logo{
+    @media (max-width: @screen-xs-max) {
+        text-align:center;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        text-align:center;
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
+}
+
 .top-body__logo img {
     max-width: 100%;
 }
 
-.top-body__partners {
-    text-align: right;
+.top-body__banner-top{
+    text-align:right;
 }
 
-.top-body__partners > img {
-    max-width: 100%;
+.top-body__banner-top img{
+    max-width:100%;
 }
 
 //navbar
