--- a/LR.WebUI/Areas/Admin/Views/Redirects/_GridView.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Redirects/_GridView.cshtml
@@ -8,6 +8,7 @@
             new SxExtantions.SxGridViewSettings<SxVM301Redirect>
             {
                 Columns = new SxExtantions.SxGridViewColumn<SxVM301Redirect>[]{
+                    new SxExtantions.SxGridViewColumn<SxVM301Redirect>{FieldName="DateCreate", Caption="Дата создания"},
                     new SxExtantions.SxGridViewColumn<SxVM301Redirect>{FieldName="OldUrl", Caption="Старый адрес"},
                     new SxExtantions.SxGridViewColumn<SxVM301Redirect>{FieldName="NewUrl", Caption="Новый адрес"}
                 },
