--- a/LR.WebUI/Areas/Admin/Views/VideoLinks/_GridViewNotLinked.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/VideoLinks/_GridViewNotLinked.cshtml
@@ -10,6 +10,7 @@
             new SxExtantions.SxGridViewSettings<SxVMVideo>
             {
                 Columns = new SxExtantions.SxGridViewColumn<SxVMVideo>[]{
+                    new SxExtantions.SxGridViewColumn<SxVMVideo>{FieldName="Id", Caption="Идентификатор видео"},
                     new SxExtantions.SxGridViewColumn<SxVMVideo>{FieldName="Title", Caption="Название видео"},
                     new SxExtantions.SxGridViewColumn<SxVMVideo>{FieldName="VideoId", Caption="Идентификатор"}
                 },
