--- a/LR.WebUI/Areas/Admin/Views/Shared/_NotMaterialPictures.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Shared/_NotMaterialPictures.cshtml
@@ -8,7 +8,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">@Model.Title</h4>
-                <p><small>Непривязанные видео</small></p>
+                <p><small>Непривязанные фото</small></p>
             </div>
             <div class="modal-body" id="grid-not-mat-videos">
 
