--- a/LR.WebUI/Areas/Admin/Views/AffiliateLinks/_GridView.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/AffiliateLinks/_GridView.cshtml
@@ -5,7 +5,9 @@
         {
             Columns = new SxExtantions.SxGridViewColumn<SxVMAffiliateLink>[]{
                 new SxExtantions.SxGridViewColumn<SxVMAffiliateLink>{FieldName="Id", Caption="Идентификатор", Template=x=> { return "<b class=\"text-info\">"+x.Id+"</b>"; } },
-                new SxExtantions.SxGridViewColumn<SxVMAffiliateLink>{FieldName="ClickCost", Caption="Стоимость клика, руб."},
+                new SxExtantions.SxGridViewColumn<SxVMAffiliateLink>{FieldName="ClickCost", Caption="Стоимость клика, руб.", Template=x=> {
+                    return Math.Round((decimal)x.ClickCost, 2).ToString();
+                } },
                 new SxExtantions.SxGridViewColumn<SxVMAffiliateLink>{FieldName="ViewsCount", Caption="Кол-во переходов"}
             },
             DataAjaxUrl = Url.Action("Index", "AffiliateLinks"),
