--- a/LR.WebUI/Areas/Admin/Views/Pictures/Index.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Pictures/Index.cshtml
@@ -34,26 +34,42 @@
 </div>
 
 <div class="modal fade" tabindex="-1" role="dialog" id="delPicturesModel">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Очистка БД изображений</h4>
-            </div>
-            <div class="modal-body">
-                <div class="alert alert-warning">
-                    <strong>Внимание!</strong> При удалении не удаляются фото, используемые в разметке материалов.
+    @using (Ajax.BeginForm("DeleteFreePictures", new { controller = "Pictures" }, new AjaxOptions { HttpMethod = "post", OnBegin= "$('#delPicturesModel .progress').show()", OnSuccess= "$('#delPicturesModel').modal('hide'); $('#delPicturesModel .progress').hide(); alert('Фото успешно очищены!');", OnFailure= "$('#delPicturesModel .progress').hide()", UpdateTargetId= "grid-pictures" }))
+    {
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Очистка БД изображений</h4>
                 </div>
-                <div id="freePictures">
+                <div class="modal-body">
+                    <div class="alert alert-warning">
+                        <strong>Внимание!</strong> При удалении не удаляются фото, используемые в разметке материалов.
+                    </div>
+                    <div id="freePictures">
 
+                    </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
-                <button type="button" class="btn btn-primary">Приступить</button>
+                <div class="modal-footer">
+                    <div class="row">
+                        <div class="col-md-9">
+                            <div class="progress" style="margin: 0px; position: relative; top: 7px; display:none;">
+                                <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                    <span class="sr-only">100% Complete</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="text-right">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+                                <button type="submit" class="btn btn-primary">Приступить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    }
 </div>
 
 @section scripts{
