--- a/LR.WebUI/Areas/Admin/Views/Redirects/Index.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Redirects/Index.cshtml
@@ -1,21 +1,28 @@
-﻿@model SxVM301Redirect[]
+﻿@model SxVMRedirect[]
 @{
     ViewBag.Title = "301 редирект";
 }
 
 <h2>@ViewBag.Title</h2>
 <div class="alert alert-warning">
-    <strong>Внимание!</strong> В силу невозможности отследить все битые ссылки рекомендуется заменять редирект для всех страниц, уже прошедших индексацию
+    <ol>
+        <li>
+            При добавлении редиректа происходит обновление конечных адресов существующих редиректов на конечный адрес нового редиректа при условии, что конечный адрес обновляемых редиректов равен начальному адресу добавляемого. <b>Внимание!</b> Наличие нескольких страниц, ведущих на один и тот же новый адрес приведет к наличию <b class="text-danger">дублей</b> страниц
+        </li>
+        <li>
+            При обновлени существующего редиректа происходит обновлении только редактируемой модели редиректа
+        </li>
+    </ol>
 </div>
 
-<div id="grid-301-redirects">
+<div id="grid-redirects">
     @Html.Partial("_GridView", Model)
 </div>
 
 @section scripts{
     <script>
         $(function () {
-            $('#grid-301-redirects').sx_gv();
+            $('#grid-redirects').sx_gv();
         });
     </script>
 }
