--- a/LR.WebUI/Areas/Admin/Views/Redirects/_GridView.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Redirects/_GridView.cshtml
@@ -1,22 +1,23 @@
-﻿@model SxVM301Redirect[]
+﻿@model SxVMRedirect[]
 @{
     Layout = null;
 }
 
 
 @Html.SxGridView(Model,
-            new SxExtantions.SxGridViewSettings<SxVM301Redirect>
+            new SxExtantions.SxGridViewSettings<SxVMRedirect>
             {
-                Columns = new SxExtantions.SxGridViewColumn<SxVM301Redirect>[]{
-                    new SxExtantions.SxGridViewColumn<SxVM301Redirect>{FieldName="DateCreate", Caption="Дата создания"},
-                    new SxExtantions.SxGridViewColumn<SxVM301Redirect>{FieldName="OldUrl", Caption="Старый адрес"},
-                    new SxExtantions.SxGridViewColumn<SxVM301Redirect>{FieldName="NewUrl", Caption="Новый адрес"}
+                Columns = new SxExtantions.SxGridViewColumn<SxVMRedirect>[]{
+                    new SxExtantions.SxGridViewColumn<SxVMRedirect>{FieldName="DateCreate", Caption="Дата создания"},
+                    new SxExtantions.SxGridViewColumn<SxVMRedirect>{FieldName="OldUrl", Caption="Старый адрес"},
+                    new SxExtantions.SxGridViewColumn<SxVMRedirect>{FieldName="NewUrl", Caption="Новый адрес"}
                 },
                 EnableCreating = true,
                 CreateRowUrl = Url.Action("Edit", "Redirects"),
                 EnableEditing = true,
                 EditRowUrl = x => { return Url.Action("Edit", "Redirects", new { id = x.Id }); },
                 DataAjaxUrl = Url.Action("Index", "Redirects"),
-                ShowPagerInfo = true
+                ShowPagerInfo = true,
+                RowCssClass = x => { return x.IsDuplicate ? "danger" : null; }
             }
     )
