--- a/LR.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -440,24 +440,35 @@
 
     @*error panel*@
     <div class="modal fade" tabindex="-1" role="dialog" id="modal-error">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title"></h4>
-                </div>
-                <div class="modal-body" style="overflow:hidden; overflow-y:auto; max-height:300px;">
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
-                    <button type="button" class="btn btn-primary"><i class="fa fa-envelope-o" aria-hidden="true"></i> Отправить разработчику</button>
+        @using (Ajax.BeginForm("SendErrorToArchitect", new { controller = "Errors" }, new AjaxOptions { HttpMethod = "post", OnBegin= "$('#modal-error-send-btn').append('<i class=\"fa fa-spinner fa-spipn\"></i>')", OnSuccess= "$('#modal-error-send-btn').find('.fa-spinner').remove();$('#modal-error').modal('hide'); alert('Письмо успешно отправлено!')" }, new { @id = "modal-error-form" }))
+        {
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content panel-danger">
+                    <div class="modal-header panel-heading" style="border-top-left-radius: inherit; border-top-right-radius: inherit;">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title"></h4>
+                    </div>
+                    <div class="modal-body">
+                        <input type="hidden" name="rawUrl" />
+                        <textarea name="html" class="form-control" style="height:300px; resize:none;"></textarea>
+                    </div>
+                    <div class="modal-footer">
+                        <ul class="list-unstyled list-inline">
+                            <li>
+                                <button type="submit" class="btn btn-default" id="modal-error-send-btn"><i class="fa fa-envelope-o" aria-hidden="true"></i> Отправить разработчику</button>
+                            </li>
+                            <li>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
+        }
     </div>
 
     <script src="~/Areas/Admin/content/dist/js/site.min.js"></script>
+    <script src="~/content/dist/js/jquery.unobtrusive-ajax.min.js"></script>
     <script>
         $(function () {
             $('#side-menu').metisMenu();
@@ -490,9 +501,10 @@
 
             $(document).ajaxError(function (event, xhr, settings) {
                 $modal = $('#modal-error');
-                console.log(xhr);
                 $modal.find('.modal-header h4').html('<span class="text-danger">Ошибка ' + xhr.status+ '</span>');
-                $modal.find('.modal-body').text(xhr.responseText);
+                $modal.find('.modal-body textarea').val(xhr.responseText);
+                $modal.find('.modal-body input[name="rawUrl"]').val('@Request.RawUrl');
+                $('.modal').modal('hide');
                 $('#modal-error').modal('show');
             });
 
