--- a/LR.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -427,6 +427,9 @@
                         <li>
                             <a href="@Url.Action("Index", "Chat")"><i class="fa fa fa-comments-o fa-fw"></i> Чат</a>
                         </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Analizator")"><i class="fa fa-line-chart fa-fw" aria-hidden="true"></i> Анализатор</a>
+                        </li>
                     </ul>
                 </div>
             </div>
