--- a/LR.WebUI/Views/Articles/Details.cshtml
+++ b/LR.WebUI/Views/Articles/Details.cshtml
@@ -75,5 +75,5 @@
 </article>
 
 @section scripts{
-    <script src="~/content/dist/js/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="@Url.Action("Js", "StaticContent", new { name="jquery.unobtrusive-ajax"})"></script>
 }
