--- a/LR.WebUI/Views/MaterialCategories/_TreeViewMenu.cshtml
+++ b/LR.WebUI/Views/MaterialCategories/_TreeViewMenu.cshtml
@@ -22,7 +22,7 @@
     <br />
     @Html.SxTree(Model, new SxExtantions.SxTreeSettings<SxVMMaterialCategory>
 {
-    FuncChildren = x => { return x.ChildCategories; },
+    FuncChildren = x => { return x.Childs; },
     FuncContent = x => { return "<a href=\""+ Url.Action("List", "Articles", new { cat = x.Id }) + "\">"+x.Title+"</a>" ; }
 }, new { @class= "categories__list" })
 </aside>
