--- a/LR.WebUI/Views/Shared/_AboutUs.cshtml
+++ b/LR.WebUI/Views/Shared/_AboutUs.cshtml
@@ -2,10 +2,10 @@
     <h4 class="green-header"><span class="green-header__arrow">О нас</span></h4>
     <div class="about-us__img" style="background-image:url('/content/static/temp/about-widget.jpg');"></div>
     <div class="about-us__title">
-        <h2>@(SX.WebCore.MvcApplication.SxMvcApplication.SiteSettingsProvider[SX.WebCore.Resources.Settings.siteName]?.Value)</h2>
+        <h2>@(SX.WebCore.MvcApplication.SxMvcApplication.SiteSettingsProvider[SX.WebCore.Resources.Settings.sitename]?.Value)</h2>
     </div>
     <div class="about-us__txt">
-        @Html.Raw(SX.WebCore.MvcApplication.SxMvcApplication.SiteSettingsProvider[SX.WebCore.Resources.Settings.siteDesc]?.Value)
+        @Html.Raw(SX.WebCore.MvcApplication.SxMvcApplication.SiteSettingsProvider[SX.WebCore.Resources.Settings.sitedesc]?.Value)
     </div>
     <br />
 </aside>
