--- a/LR.WebUI/Views/Articles/_Last.cshtml
+++ b/LR.WebUI/Views/Articles/_Last.cshtml
@@ -1,6 +1,6 @@
-﻿@model SxVMMaterial[]
+﻿@model VMMaterial[]
 @{
-    SxVMMaterial item = null;
+    VMMaterial item = null;
 }
 
 @if (Model.Any())
