--- a/LR.WebUI/Views/Articles/_ReadingMaterial.cshtml
+++ b/LR.WebUI/Views/Articles/_ReadingMaterial.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxVMMaterial
+﻿@model VMMaterial
 
 <div class="read-now-article">
     <div class="read-now-article__img" style="background-image:url('@Url.Action("Picture", "Pictures", new { id=Model.FrontPictureId })')">
