--- a/LR.WebUI/Views/Shared/_Footer.cshtml
+++ b/LR.WebUI/Views/Shared/_Footer.cshtml
@@ -9,8 +9,8 @@
     <div class="container">
         <div class="text-center">
             <div class="post-footer">
-                <em>©@(year) - PenciDesign. All Right Reserved. Designed and Developed by PenciDesign</em><br />
-                <em><small>Разработка и поддержка <a href="mailto:simlex.dev.2014@gmail.com">simlex</a></small></em><br />
+                <em>©@(year) - Все права защищены. Любое использование или копирование материалов сайта - только с разрешения правообладателя и только с указанием ссылки на сайт </em><br />
+                <em><small>Разработка и поддержка <a href="mailto:simlex.dev.2014@gmail.com">goldfish.pro</a></small></em><br />
                 <a class="btn-top-top" href="#"><i class="fa fa-angle-up"></i>В начало</a>
             </div>
         </div>
