--- a/LR.WebUI/Views/Shared/_Footer.cshtml
+++ b/LR.WebUI/Views/Shared/_Footer.cshtml
@@ -10,7 +10,7 @@
         <div class="text-center">
             <div class="post-footer">
                 <em>©@(year) - Все права защищены. Любое использование или копирование материалов сайта - только с разрешения правообладателя и только с указанием ссылки на сайт </em><br />
-                <em><small>Разработка и поддержка <a href="mailto:simlex.dev.2014@gmail.com">goldfish.pro</a></small></em><br />
+                <em><small>Разработка и поддержка <a href="http://goldfish.pro" target="_blank">goldfish.pro</a></small></em><br />
                 <a class="btn-top-top" href="#"><i class="fa fa-angle-up"></i>В начало</a>
             </div>
         </div>
